@@ -1,3 +1,9 @@
+2006-10-14  Marcus Meissner  <marcus@jet.franken.de>
+	
+	* library.c: removed unused variable j
+		The Canon fast retrieval seems to be a bit flawed
+		on the IXUS 55, so add some checking.
+
 2006-10-13  Marcus Meissner  <marcus@jet.franken.de>
 
 	* ptp.c,ptp.h,ptp-pack.c,library.c:
